Added Redis Chache using docker